--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#364251</color>
+    <color name="colorPrimaryDark">#364251</color>
+    <color name="colorAccent">#F17B0E</color>
+
+    <color name="barely_white">#F3F8FD</color>
+
+    <color name="trans">#00000000</color>
 </resources>
