--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,14 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.nopoint.midpoint.map.MapActivity">
-
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+    tools:context="com.nopoint.midpoint.fragments.MapFragment">
+    <FrameLayout
+        android:id="@+id/google_map"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -31,7 +28,7 @@
             android:id="@+id/destination_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.75"
+            android:layout_weight="0.9"
             android:ems="10"
             android:hint="Destination"
             android:inputType="textPersonName" />
@@ -43,5 +40,4 @@
             android:layout_weight="1.25"
             android:text="Get directions" />
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
