--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_vertical"
     tools:context=".fragments.LoginFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:layout_above="@id/button_log_in"
-        >
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/InputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/hint_email"
-            app:boxBackgroundColor="@android:color/transparent"
-            app:boxBackgroundMode="filled">
+            app:boxBackgroundColor="@android:color/transparent">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/login_input_email"
@@ -35,29 +32,26 @@
             style="@style/InputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="20dp"
             android:hint="@string/hint_password"
-            app:boxBackgroundColor="@android:color/transparent"
-            app:boxBackgroundMode="filled">
+            app:boxBackgroundColor="@android:color/transparent">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/login_input_password"
                 style="@style/InputEditText"
+                android:id="@+id/login_input_password"
                 android:inputType="textPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
         </com.google.android.material.textfield.TextInputLayout>
+
     </LinearLayout>
-
-
 
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_log_in"
-        style="@style/ButtonSquareIcon"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
+        style="@style/ButtonPrimary"
+        android:layout_marginTop="24dp"
         app:cornerRadius="0dp"
         app:icon="@drawable/ic_arrow"
         app:iconGravity="textStart"
@@ -65,4 +59,4 @@
         app:iconTint="@color/barely_white"
         app:srcCompat="@drawable/ic_arrow" />
 
-</RelativeLayout>
+</LinearLayout>
