--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -1,27 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_vertical"
     tools:context=".fragments.SignUpFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:layout_above="@id/button_sign_up"
-        >
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/sign_up_input_layout_email"
             style="@style/InputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="48dp"
-            android:layout_marginEnd="48dp"
             android:hint="@string/hint_email"
             app:boxBackgroundColor="@android:color/transparent"
             app:boxBackgroundMode="filled"
@@ -30,9 +26,9 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/sign_up_input_email"
                 style="@style/InputEditText"
-                android:text="a@a.com"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="a@a.com" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -40,9 +36,6 @@
             style="@style/InputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="48dp"
-            android:layout_marginEnd="48dp"
-            android:layout_marginTop="36dp"
             android:hint="@string/hint_username"
             app:boxBackgroundColor="@android:color/transparent"
             app:boxBackgroundMode="filled"
@@ -60,7 +53,6 @@
             style="@style/InputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
             android:inputType="textPassword"
             android:hint="@string/hint_password"
             app:boxBackgroundColor="@android:color/transparent"
@@ -79,7 +71,6 @@
             style="@style/InputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
             android:inputType="textPassword"
             android:hint="@string/hint_confirm_password"
             app:boxBackgroundColor="@android:color/transparent"
@@ -97,14 +88,12 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_sign_up"
-        style="@style/ButtonSquareIcon"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
+        style="@style/ButtonPrimary"
+        android:layout_marginTop="24dp"
         app:cornerRadius="0dp"
         app:icon="@drawable/ic_arrow"
         app:iconGravity="textStart"
         app:iconPadding="0dp"
         app:iconTint="@color/barely_white"
         app:srcCompat="@drawable/ic_arrow" />
-
-</RelativeLayout>
+</LinearLayout>
