--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="barely_white">#F3F8FD</color>
 
     <color name="trans">#00000000</color>
+
+    // New Colors
+    <color name="color_primary">#F45905</color>
+    <color name="color_primary_dark">#BE4809</color>
+    <color name="color_dark">#1e1e1e</color>
+    <color name="color_white">#FFFFFF</color>
+    <color name="color_white_accent">#F3F3F3</color>
+    <color name="color_light_grey">#DCDCDC</color>
 </resources>
