--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,9 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/color_accent</item>
+        <item name="android:textViewStyle">@font/pt_sans</item>
+        <item name="android:textColor">@color/color_dark</item>
+        <item name="buttonStyle">@font/pt_sans</item>
     </style>
 
     <style name="MidpointFullscreen" parent="AppTheme">
@@ -22,10 +25,18 @@
         <item name="android:backgroundTint">@color/color_accent</item>
     </style>
 
+    // Primary Button
+    <style name="ButtonPrimary" parent="AppTheme">
+        <item name="android:stateListAnimator">@null</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">57dp</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:backgroundTint">@color/color_primary</item>
+    </style>
+
     // Input Layout
     <style name="InputLayout" parent="AppTheme">
-        <item name="android:layout_marginStart">48dp</item>
-        <item name="android:layout_marginEnd">48dp</item>
         <item name="colorAccent">@color/colorPrimaryDark</item>
         <item name="colorControlNormal">@color/colorPrimaryDark</item>
         <item name="colorControlActivated">@color/colorPrimaryDark</item>
