--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -7,6 +7,7 @@
     android:background="#ffffff"
     android:orientation="vertical"
     android:padding="16dp"
+    style="@style/RoundedBottomSheet"
     app:behavior_hideable="false"
     app:behavior_peekHeight="90dp"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
