--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -17,8 +17,7 @@
             style="@style/InputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_email"
-            app:boxBackgroundColor="@android:color/transparent">
+            android:hint="@string/hint_email">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/login_input_email"
@@ -33,8 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:hint="@string/hint_password"
-            app:boxBackgroundColor="@android:color/transparent">
+            android:hint="@string/hint_password">
 
             <com.google.android.material.textfield.TextInputEditText
                 style="@style/InputEditText"
