Progress #9, Remove bottom sheet placeholder layout
- Added rectangle drawable
- Fixed bottom sheet rounded corners

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -53,6 +53,8 @@
     <style name="CustomShapeAppearanceOverlay.MaterialComponents.BottomSheet" parent="">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">16dp</item>
+        <item name="cornerSizeBottomRight">0dp</item>
+        <item name="cornerSizeBottomLeft">0dp</item>
     </style>
 
 </resources>
