--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -12,19 +12,10 @@
     app:behavior_peekHeight="48dp"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
-    <LinearLayout
-        android:layout_width="24dp"
-        android:layout_height="4dp"
-        android:layout_gravity="center"
-        android:background="@drawable/pull_up_rectangle" />
 
-    <TextView
-        android:id="@+id/meet_txt"
+    <fragment
+        android:id="@+id/fragment"
+        android:name="com.nopoint.midpoint.fragments.MeetingFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/pt_sans"
-        android:paddingTop="8dp"
-        android:text="@string/meet_a_friend"
-        android:textAlignment="center"
-        android:textSize="16sp" />
+        android:layout_height="wrap_content" />
 </LinearLayout>
