--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -1,13 +1,61 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.nopoint.midpoint.fragments.FriendsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
+    <com.google.android.material.circularreveal.CircularRevealFrameLayout
+        android:id="@+id/friends_add_sheet"
+        android:visibility="invisible"
         android:layout_height="match_parent"
-        android:text="Friends Fragment" />
+        android:layout_width="match_parent"
+        android:background="@color/color_white_accent"
+        android:layout_gravity="bottom|end"
+        app:layout_behavior="com.google.android.material.transformation.FabTransformationSheetBehavior"
+        >
 
-</FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@color/orange"
+            android:padding="16dp"
+            >
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/friends_add_return"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:icon="@drawable/ic_arrow"
+                app:iconTint="@color/color_white"
+                app:backgroundTint="@color/trans"
+                />
+
+            <TextView
+                android:layout_width="260dp"
+                android:layout_height="wrap_content"
+                android:text="Create a Friend Request"
+                android:textColor="@color/color_white"
+                android:textSize="34sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+
+    </com.google.android.material.circularreveal.CircularRevealFrameLayout>
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/friends_fab_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        app:tint="@color/color_white"
+        app:srcCompat="@drawable/ic_add"
+        app:maxImageSize="16dp"
+        app:backgroundTint="@color/orange"
+        />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
