--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,12 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/color_primary</item>
-        <item name="colorPrimaryDark">@color/color_primary_dark</item>
-        <item name="colorAccent">@color/color_white_accent</item>
+        <item name="colorPrimary">@color/color_white</item>
+        <item name="colorPrimaryDark">@color/color_light_grey</item>
+        <item name="colorAccent">@color/orange</item>
+        <item name="colorOnPrimary">@color/test</item>
         <item name="android:textViewStyle">@font/pt_sans</item>
         <item name="android:textColor">@color/color_dark</item>
         <item name="buttonStyle">@font/pt_sans</item>
@@ -15,6 +16,7 @@
         <item name="windowNoTitle">true</item>
         <item name="android:windowFullscreen">true</item>
     </style>
+
 
     // Square icon button
     <style name="ButtonSquareIcon" parent="Widget.MaterialComponents.Button">
@@ -26,6 +28,7 @@
 
     // Primary Button
     <style name="ButtonPrimary" parent="Widget.MaterialComponents.Button">
+        <item name="backgroundTint">@color/orange</item>
         <item name="android:stateListAnimator">@null</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">57dp</item>
@@ -35,9 +38,7 @@
 
     // Input Layout
     <style name="InputLayout" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
-        <item name="colorAccent">@color/colorPrimaryDark</item>
-        <item name="colorControlNormal">@color/colorPrimaryDark</item>
-        <item name="colorControlActivated">@color/colorPrimaryDark</item>
+
     </style>
 
     // Input EditText
