--- a/app/src/main/res/layout/request_header.xml
+++ b/app/src/main/res/layout/request_header.xml
@@ -5,7 +5,9 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/header_text"
+        android:id="@+id/header_txt"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textColor="@color/color_primary"
+        android:textSize="18sp" />
 </LinearLayout>
