--- a/app/src/main/res/layout/fragment_meeting.xml
+++ b/app/src/main/res/layout/fragment_meeting.xml
@@ -22,7 +22,7 @@
             android:id="@+id/meet_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/pt_sans"
+            android:fontFamily="@font/pt_sans_bold"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
             android:text="@string/meet_a_friend"
@@ -60,7 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1.5"
-            android:text="Send request"
+            android:text="@string/send_request"
             android:textColor="@color/color_white"
             app:cornerRadius="0dp" />
     </LinearLayout>
