--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -7,39 +7,84 @@
 
     <com.google.android.material.circularreveal.CircularRevealFrameLayout
         android:id="@+id/friends_add_sheet"
-        android:visibility="invisible"
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@color/color_white_accent"
         android:layout_gravity="bottom|end"
+        android:visibility="invisible"
         app:layout_behavior="com.google.android.material.transformation.FabTransformationSheetBehavior"
         >
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@color/orange"
-            android:padding="16dp"
-            >
+            android:layout_height="match_parent">
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/friends_add_return"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/friends_add_sheet_header"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:icon="@drawable/ic_arrow"
-                app:iconTint="@color/color_white"
-                app:backgroundTint="@color/trans"
-                />
+                android:orientation="vertical"
+                android:background="@color/orange"
+                >
 
-            <TextView
-                android:layout_width="260dp"
+                <ImageButton
+                    android:id="@+id/friends_add_return"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:padding="8dp"
+                    android:cropToPadding="true"
+                    android:src="@drawable/ic_arrow_left"
+                    android:background="@color/trans"
+                    />
+
+                <TextView
+                    android:layout_width="260dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="24dp"
+                    android:text="Create a Friend Request"
+                    android:textColor="@color/color_white"
+                    android:textSize="28sp"
+                    android:textStyle="bold" />
+
+
+                <com.nopoint.midpoint.views.SearchView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    />
+
+            </LinearLayout>
+
+            <RelativeLayout
+                android:layout_below="@id/friends_add_sheet_header"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Create a Friend Request"
-                android:textColor="@color/color_white"
-                android:textSize="34sp"
-                android:textStyle="bold" />
-        </LinearLayout>
+                android:paddingTop="16dp"
+                android:paddingBottom="16dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:text="friends_search_result_username"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:text="Add"
+                    />
+
+            </RelativeLayout>
+
+        </RelativeLayout>
+
+
 
 
     </com.google.android.material.circularreveal.CircularRevealFrameLayout>
