--- a/app/src/main/res/layout/view_search.xml
+++ b/app/src/main/res/layout/view_search.xml
@@ -39,14 +39,20 @@
             android:backgroundTint="@color/color_dark"
             android:background="@drawable/ic_search" />
 
+
+
         <EditText
-            android:id="@+id/search_input_text"
+            android:id="@+id/search_input"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_toStartOf="@id/execute_search_button"
             android:layout_toEndOf="@id/close_search_button" />
+        <!--<androidx.appcompat.widget.SearchView
+            android:id="@+id/search_input"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>-->
 
         <View
             android:id="@+id/execute_search_button"
