--- a/app/src/main/res/layout/request_row.xml
+++ b/app/src/main/res/layout/request_row.xml
@@ -3,12 +3,28 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/receiver_txt"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_weight="1" />
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/timestamp_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/pt_sans"
+            android:textColor="@color/color_dark_grey" />
+
+        <TextView
+            android:id="@+id/receiver_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:fontFamily="@font/pt_sans_bold"
+            android:textColor="@color/color_dark" />
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/meet_btn"
