--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -68,6 +68,7 @@
                 android:paddingEnd="8dp">
 
                 <TextView
+                    android:id="@+id/friends_result_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
