--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -4,6 +4,16 @@
     android:layout_height="match_parent"
     tools:context="com.nopoint.midpoint.fragments.MapFragment">
 
+    <!-- Remove later -->
+    <Button
+        android:id="@+id/button_TEST"
+        android:backgroundTint="@color/test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/color_white"
+        android:text="test"
+        />
+
     <!--Map content-->
     <include layout="@layout/map_content" />
 
