--- a/app/src/main/res/layout/fragment_meeting.xml
+++ b/app/src/main/res/layout/fragment_meeting.xml
@@ -31,6 +31,8 @@
 
     </LinearLayout>
 
+
+
     <LinearLayout
         android:id="@+id/friend_thing"
         android:layout_width="match_parent"
@@ -47,7 +49,7 @@
             android:hint="@string/hint_username">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/friend_username"
+                android:id="@+id/meeting_username_input"
                 style="@style/InputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
