--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -53,9 +53,11 @@
 
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/button_log_in"
         style="@style/ButtonPrimary"
+        android:id="@+id/button_log_in"
         android:layout_marginTop="24dp"
+        android:layout_height="56dp"
+        android:layout_width="match_parent"
         app:cornerRadius="0dp"
         app:icon="@drawable/ic_arrow"
         app:iconGravity="textStart"
