--- a/app/src/main/res/layout/view_search.xml
+++ b/app/src/main/res/layout/view_search.xml
@@ -2,67 +2,58 @@
     android:layout_width="match_parent"
     android:layout_height="?actionBarSize"
     android:background="@color/orange">
-
-    <RelativeLayout
-        android:id="@+id/search_closed_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center">
-
-        <View
-            android:id="@+id/open_search_button"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="16dp"
-            android:backgroundTint="@color/color_white"
-            android:background="@drawable/ic_search" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/search_open_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:background="@color/color_white"
-        android:visibility="invisible">
-
-        <View
-            android:id="@+id/close_search_button"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="16dp"
-            android:backgroundTint="@color/color_dark"
-            android:background="@drawable/ic_search" />
-
-
-
-        <EditText
-            android:id="@+id/search_input"
+        <RelativeLayout
+            android:id="@+id/search_closed_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_toStartOf="@id/execute_search_button"
-            android:layout_toEndOf="@id/close_search_button" />
-        <!--<androidx.appcompat.widget.SearchView
-            android:id="@+id/search_input"
+            android:layout_gravity="center">
+
+            <View
+                android:id="@+id/search_button_open"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="16dp"
+                android:backgroundTint="@color/color_white"
+                android:background="@drawable/ic_search" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/search_open_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>-->
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:background="@color/color_white"
+            android:visibility="invisible">
 
-        <View
-            android:id="@+id/execute_search_button"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/ic_close" />
+            <View
+                android:id="@+id/execute_search_button"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="16dp"
+                android:backgroundTint="@color/color_dark"
+                android:background="@drawable/ic_search" />
 
-    </RelativeLayout>
+            <EditText
+                android:id="@+id/search_input"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_toStartOf="@id/close_search_button"
+                android:layout_toEndOf="@id/execute_search_button" />
 
+            <View
+                android:id="@+id/close_search_button"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="16dp"
+                android:backgroundTint="@color/color_dark"
+                android:background="@drawable/ic_close" />
+        </RelativeLayout>
 </FrameLayout>
