--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,14 +26,28 @@
         <item name="android:insetBottom">0dp</item>
     </style>
 
+
     // Primary Button
     <style name="ButtonPrimary" parent="Widget.MaterialComponents.Button">
         <item name="backgroundTint">@color/orange</item>
         <item name="android:stateListAnimator">@null</item>
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">57dp</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:insetTop">0dp</item>
         <item name="android:insetBottom">0dp</item>
+        <item name="elevation">0dp</item>
+        <item name="cornerRadius">0dp</item>
+        <item name="android:textColor">@color/color_white</item>
+    </style>
+
+
+    // Image Button
+    <style name="ButtonImage">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:cropToPadding">true</item>
+        <item name="android:background">@color/trans</item>
     </style>
 
     // Input Layout
