--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical"
+    android:layout_marginTop="72dp"
     tools:context=".fragments.SignUpFragment">
 
     <LinearLayout
@@ -15,12 +16,10 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/sign_up_input_layout_email"
-            style="@style/InputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/hint_email"
             app:errorEnabled="true">
-
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/sign_up_input_email"
                 style="@style/InputEditText"
@@ -31,12 +30,10 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/sign_up_input_layout_username"
-            style="@style/InputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/hint_username"
             app:errorEnabled="true">
-
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/sign_up_input_username"
                 style="@style/InputEditText"
@@ -46,15 +43,13 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/sign_up_input_layout_password"
-            style="@style/InputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/hint_password"
             app:errorEnabled="true">
-
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/sign_up_input_password"
                 style="@style/InputEditText"
+                android:id="@+id/sign_up_input_password"
                 android:inputType="textPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -62,12 +57,10 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/sign_up_input_layout_confirm_password"
-            style="@style/InputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/hint_confirm_password"
             app:errorEnabled="true">
-
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/sign_up_input_confirm_password"
                 style="@style/InputEditText"
@@ -77,15 +70,10 @@
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
-
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/button_sign_up"
         style="@style/ButtonPrimary"
-        android:layout_marginTop="24dp"
-        app:cornerRadius="0dp"
-        app:icon="@drawable/ic_arrow"
-        app:iconGravity="textStart"
-        app:iconPadding="0dp"
-        app:iconTint="@color/barely_white"
-        app:srcCompat="@drawable/ic_arrow" />
+        android:id="@+id/button_sign_up"
+        android:layout_marginTop="16dp"
+        android:layout_height="72dp"
+        android:text="@string/entry_sign_up"/>
 </LinearLayout>
