--- a/app/src/main/res/layout/row_friend_search_results.xml
+++ b/app/src/main/res/layout/row_friend_search_results.xml
@@ -29,5 +29,12 @@
         android:id="@+id/friends_button_send_friend_request"
         android:layout_alignParentEnd="true"
         android:src="@drawable/ic_add"
-        android:tint="#219653"/>
+        android:tint="@color/color_light_grey"/>
+
+    <ImageView
+        style="@style/StatusIcon"
+        android:id="@+id/friends_req_status"
+        android:layout_alignParentEnd="true"
+        android:src="@drawable/ic_pending"
+        android:visibility="gone"/>
 </RelativeLayout>
