--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,13 +3,12 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.Light">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/color_white</item>
+        <item name="colorPrimary">@color/orange</item>
         <item name="colorPrimaryDark">@color/color_light_grey</item>
         <item name="colorAccent">@color/orange</item>
-        <item name="colorOnPrimary">@color/test</item>
+        <item name="colorOnPrimary">@color/color_white</item>
         <item name="android:textViewStyle">@font/pt_sans</item>
         <item name="android:textColor">@color/color_dark</item>
-        <item name="buttonStyle">@font/pt_sans</item>
     </style>
 
     <style name="MidpointFullscreen" parent="AppTheme">
@@ -18,26 +17,10 @@
     </style>
 
 
-    // Square icon button
-    <style name="ButtonSquareIcon" parent="Widget.MaterialComponents.Button">
-        <item name="android:layout_width">80dp</item>
-        <item name="android:layout_height">80dp</item>
-        <item name="android:insetTop">0dp</item>
-        <item name="android:insetBottom">0dp</item>
-    </style>
-
-
     // Primary Button
     <style name="ButtonPrimary" parent="Widget.MaterialComponents.Button">
-        <item name="backgroundTint">@color/orange</item>
-        <item name="android:stateListAnimator">@null</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:insetTop">0dp</item>
-        <item name="android:insetBottom">0dp</item>
-        <item name="elevation">0dp</item>
-        <item name="cornerRadius">0dp</item>
-        <item name="android:textColor">@color/color_white</item>
     </style>
 
 
@@ -50,15 +33,19 @@
         <item name="android:background">@color/trans</item>
     </style>
 
-    // Input Layout
-    <style name="InputLayout" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
-
+    <!-- Status Icon -->
+    <style name="StatusIcon">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:cropToPadding">true</item>
     </style>
+
 
     // Input EditText
     <style name="InputEditText" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
-        <item name="android:paddingBottom">24dp</item>
         <item name="android:background">@android:color/transparent</item>
+        <item name="android:paddingStart">4dp</item>
     </style>
 
     <!-- BottomSheet -->
