--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="color_white">#FFFFFF</color>
     <color name="color_white_accent">#F3F3F3</color>
     <color name="color_light_grey">#DCDCDC</color>
-
+    <color name="color_primary_light">#ff8b3e</color>
     <color name="color_warning">#E00000</color>
 
     <color name="orange">#F45905</color>
