--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_vertical"
-    android:layout_marginTop="144dp"
     tools:context=".fragments.LoginFragment">
 
     <LinearLayout
+        android:id="@+id/login_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -31,6 +29,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
+            android:layout_marginTop="24dp"
             android:id="@+id/login_input_layout_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -53,8 +52,8 @@
     <com.google.android.material.button.MaterialButton
         style="@style/ButtonPrimary"
         android:id="@+id/button_log_in"
-        android:layout_marginTop="16dp"
-        android:layout_height="72dp"
+        android:layout_height="64dp"
+        android:layout_alignParentBottom="true"
         android:text="@string/entry_log_in"/>
 
-</LinearLayout>
+</RelativeLayout>
