--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_vertical"
-    android:layout_marginTop="72dp"
     tools:context=".fragments.SignUpFragment">
 
     <LinearLayout
+        android:id="@+id/sign_up_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -32,6 +30,7 @@
             android:id="@+id/sign_up_input_layout_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
             android:hint="@string/hint_username"
             app:errorEnabled="true">
             <com.google.android.material.textfield.TextInputEditText
@@ -45,6 +44,7 @@
             android:id="@+id/sign_up_input_layout_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
             android:hint="@string/hint_password"
             app:errorEnabled="true">
             <com.google.android.material.textfield.TextInputEditText
@@ -59,6 +59,7 @@
             android:id="@+id/sign_up_input_layout_confirm_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
             android:hint="@string/hint_confirm_password"
             app:errorEnabled="true">
             <com.google.android.material.textfield.TextInputEditText
@@ -73,7 +74,7 @@
     <com.google.android.material.button.MaterialButton
         style="@style/ButtonPrimary"
         android:id="@+id/button_sign_up"
-        android:layout_marginTop="16dp"
-        android:layout_height="72dp"
+        android:layout_height="64dp"
+        android:layout_alignParentBottom="true"
         android:text="@string/entry_sign_up"/>
-</LinearLayout>
+</RelativeLayout>
